  - this is custom content that avoids sending an error response
- A component may now have a MoquiConf.xml file that overrides the default
  configuration file (MoquiDefaultConf.xml from the classpath) but is
  overridden by the runtime configuration file; the MoquiConf.xml file in
  each component is merged into the main conf based on the component
  dependency order (logged on startup)

Bug Fixes

- Fixed issue with REST and other JSON request body parameters where single
  entry lists were unwrapped to just the entry by the canonicalization code
- Fixed NPE in EntityFind.oneMaster() when the master value isn't found,
  now returns null with no error; fixes moqui-runtime issue #18
- Fixed ElFinder rm (moqui-runtime GitHub issue #23), response for upload
- Screen sub-content directories treated as not found so directory entries
  not listed (GitHub moqui-framework issue #47)
- In entity cache auto clear for list of view-entity fixed mapping of
  member entity fields to view entity alias, and partial match when only
  some view entity fields are on a member entity
- Cache clear fix for view-entity list cache fixes issue where adding a
  permission required manual cache clear or restart for permission to apply

===========================================================================
Release 1.6.2 - 26 Mar 2016
===========================================================================

Moqui Framework 1.6.2 is a minor new feature and bug fix release.

This release is all about performance improvements, bug fixes, library
updates and cleanups. There are a number of minor new features like better
multi-tenant handling (and security), optionally loading data on start if
the DB is empty, more flexible handling of runtime Moqui Conf XML location,
database support and transaction management, and so on.

Non Backward Compatible Changes

- Entity field types are somewhat more strict for database operations; this