@@ -115,6 +115,10 @@ New Features
   overridden by the runtime configuration file; the MoquiConf.xml file in
   each component is merged into the main conf based on the component
   dependency order (logged on startup)
+- Added ExecutionContext.runAsync method to run a closure in a worker
+  thread with an ExecutionContext like the current (tenant, user, etc)
+- Added configuration for worker thread pool parameters, used for local
+  async services, EC.runAsync, etc
 
 Bug Fixes
 
